code/force-app/main/default/objects/Private_Risk_Event__c/Private_Risk_Event__c.object-meta.xml
<CustomObject>
    <label>行內風險事件</label>
    <nameField>
        <label>警示說明</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>