code/force-app/main/default/objects/Private_Risk_Event__c/fields/Account_Private_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info__c</fullName>
    <label>客戶非公開資訊</label>
    <referenceTo>Account_Private_Info__c</referenceTo>
    <relationshipLabel>行內風險事件</relationshipLabel>
    <relationshipName>Private_Risk_Event</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>