code/force-app/main/default/objects/Private_Risk_Event__c/fields/Alert_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Release_Date__c</fullName>
    <label>警示解除日期</label>
    <type>Date</type>
</CustomField>