code/force-app/main/default/objects/Private_Risk_Event__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>資料來源</label>
    <length>100</length>
    <type>Text</type>
</CustomField>