code/force-app/main/default/objects/Private_Risk_Event__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <label>顯示主體</label>
    <length>100</length>
    <type>Text</type>
</CustomField>