code/force-app/main/default/objects/Private_Risk_Event__c/fields/Private_Risk_Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Private_Risk_Event_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>行內風險事件外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>